src/test/deca/codegen/invalid/objet/Error/Mod0Class.deca
// Erreur : reste entier par zero impossible
// Description : Modulo 0
// Resultat : erreur lors de ima


class A{
    int x = 2;
    int y = 0;
   
    void Test(){
        int z = x%y;
    }
}
{
    A a = new A();
    a.Test();
}